--- a/.gitignore
+++ b/.gitignore
@@ -13,6 +13,11 @@ target/
 .springBeans
 .sts4-cache
 
+SteamTOTPGenerator-linux
+SteamTOTPGenerator-macos
+SteamTOTPGenerator-win.exe
+
+
 ### IntelliJ IDEA ###
 .idea
 *.iws
